# harmonySEQ

./: .bzrignore  .gitignore  Action.cpp  Action.h  ActionGUI.cpp  ActionGUI.h  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Event.cpp  Event.h  EventGUI.cpp  EventGUI.h  EventsWindow.cpp  EventsWindow.h  Files.cpp  Files.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile-old  Makefile-safecopy  Makefile.am  Makefile.in  MidiDriver.cpp  MidiDriver.h  README  README.md  Sequencer.cpp  Sequencer.h  SequencerGUI.cpp  SequencerGUI.h  TreeModels.cpp  TreeModels.h  aclocal.m4  config.h.in  configure  configure.ac  debug.cpp  debug.h  (+14 more)
autom4te.cache/: output.0  output.1  output.2  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
doc/: harmonySEQ.1
doc-pak/: CHANGELOG
examples/: Makefile  Makefile.am  Makefile.in  README  big_0.12.hseq  chasm_0.13.hseq  chordexample.hseq  chordexample_0.11.hseq  complexity.hseq  complexity_0.11.hseq  example1.hseq  example2.hseq  example_0.10.hseq  example_0.9.hseq  guitar_demo.hseq  mesosphere_0.12.hseq  michas_sonata.hseq  read_m.hseq  selfcontrol_demo.hseq  selfcontrol_demo_0.11.hseq  shoreless_two_0.15.hseq  the_very_first_file.hseq  the_very_first_file_v2.hseq  trioles.h2song  trioles.hseq  trioles.xmz  tron2_0.13.hseq
images/: LICENSE
locale/: harmonySEQ.mo
locale/en/LC_MESSAGES/: harmonySEQ.mo
locale/en_GB/LC_MESSAGES/: harmonySEQ.mo
locale/pl/LC_MESSAGES/: harmonySEQ.mo
locale/pl_PL/LC_MESSAGES/: harmonySEQ.mo
locale/templates/: harmonySEQ.pot
locale/tr/LC_MESSAGES/: harmonySEQ.mo
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  en.gmo  en.po  en_EN.po  en_GB.gmo  en_GB.po  eo.po  harmonySEQ.pot  ja.gmo  ja.po  pl.gmo  pl.po  pl_PL.gmo  pl_PL.po  polish.po  tr.gmo  tr.po
src/: Action.cpp  Action.h  Action.hpp  ActionEditor.cpp  ActionEditor.hpp  ActionGUI.cpp  ActionGUI.h  ActionGUI.hpp  Atom.cpp  Atom.h  Atom.hpp  AtomContainer.cpp  AtomContainer.h  AtomContainer.hpp  CMakeLists.txt  Chord.cpp  Chord.h  Chord.hpp  ChordWidget.cpp  ChordWidget.h  ChordWidget.hpp  Color.cpp  Color.h  Color.hpp  Configuration.cpp  Configuration.h  Configuration.hpp  ControlSequencer.cpp  ControlSequencer.h  ControlSequencer.hpp  ControllerAtom.cpp  ControllerAtom.h  ControllerAtom.hpp  DiodeMidiEvent.cpp  DiodeMidiEvent.h  DiodeMidiEvent.hpp  Engine.cpp  Engine.hpp  Event.cpp  Event.h  (+71 more)
style/: harmonySEQ.css  style.css
