AUTOMAKE_OPTIONS = foreign

SUBDIRS = po examples pixmaps src

ACLOCAL_AMFLAGS = -I m4


EXTRA_DIST = config.rpath CHANGELOG LICENSE harmonyseq.desktop harmonyseq-mime.xml

appsmenudir = $(datadir)/applications
appsmenu_DATA = harmonyseq.desktop

mimedir = $(datadir)/mime/packages
mime_DATA = harmonyseq-mime.xml
