exampledir = $(docdir)/examples
example_DATA = complexity.hseq example_0.10.hseq  michas_sonata.hseq  the_very_first_file_v2.hseq the_very_first_file.hseq guitar_demo.hseq

EXTRA_DIST = complexity.hseq example_0.10.hseq  michas_sonata.hseq  the_very_first_file_v2.hseq the_very_first_file.hseq guitar_demo.hseq
