exampledir = $(docdir)/examples
example_DATA = big_0.12.hseq selfcontrol_demo_0.11.hseq chasm_0.13.hseq chordexample_0.11.hseq complexity_0.11.hseq  mesosphere_0.12.hseq tron2_0.13.hseq example_0.10.hseq michas_sonata_0.11.hseq guitar_demo_0.11.hseq shoreless_two_0.15.hseq README

EXTRA_DIST = big_0.12.hseq selfcontrol_demo_0.11.hseq chasm_0.13.hseq chordexample_0.11.hseq complexity_0.11.hseq  mesosphere_0.12.hseq tron2_0.13.hseq example_0.10.hseq michas_sonata_0.11.hseq guitar_demo_0.11.hseq shoreless_two_0.15.hseq README
