icons32dir = $(datadir)/icons/hicolor/32x32/apps/
icons32_DATA = 32x32/apps/harmonyseq.png
icons32mdir = $(datadir)/icons/gnome/32x32/mimetypes/
icons32m_DATA = 32x32/mimetypes/text-x-harmonyseq.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps/
icons48_DATA = 48x48/apps/harmonyseq.png
icons48mdir = $(datadir)/icons/gnome/48x48/mimetypes/
icons48m_DATA = 48x48/mimetypes/gnome-mime-text-x-harmonyseq.png

icons192dir = $(datadir)/icons/hicolor/192x192/apps/
icons192_DATA = 192x192/apps/harmonyseq.png
icons192mdir = $(datadir)/icons/gnome/192x192/mimetypes/
icons192m_DATA = 192x192/mimetypes/text-x-harmonyseq.png

iconsscalabledir = $(datadir)/icons/hicolor/scalable/apps/
iconsscalable_DATA = scalable/apps/harmonyseq.svg
iconsscalablemdir = $(datadir)/icons/gnome/scalable/mimetypes/
iconsscalablem_DATA = scalable/mimetypes/text-x-harmonyseq.svg

harmonyseqicons48dir = $(datadir)/harmonySEQ/icons/hicolor/48x48/
harmonyseqicons48_DATA = 48x48/metronome.png

EXTRA_DIST = 32x32/apps/harmonyseq.png 48x48/apps/harmonyseq.png 192x192/apps/harmonyseq.png scalable/apps/harmonyseq.svg 32x32/mimetypes/text-x-harmonyseq.png 48x48/mimetypes/gnome-mime-text-x-harmonyseq.png 192x192/mimetypes/text-x-harmonyseq.png scalable/mimetypes/text-x-harmonyseq.svg icon1.svg metronome.svg 48x48/metronome.png


install-data-hook:
uninstall-hook:
