icons32dir = $(datadir)/icons/hicolor/32x32/apps/
icons32_DATA = 32x32/apps/harmonyseq.png
icons32mdir = $(datadir)/icons/gnome/32x32/mimetypes/
icons32m_DATA = 32x32/mimetypes/text-x-harmonyseq.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps/
icons48_DATA = 48x48/apps/harmonyseq.png
icons48mdir = $(datadir)/icons/gnome/48x48/mimetypes/
icons48m_DATA = 48x48/mimetypes/gnome-mime-text-x-harmonyseq.png

icons192dir = $(datadir)/icons/hicolor/192x192/apps/
icons192_DATA = 192x192/apps/harmonyseq.png
icons192mdir = $(datadir)/icons/gnome/192x192/mimetypes/
icons192m_DATA = 192x192/mimetypes/text-x-harmonyseq.png

iconsscalabledir = $(datadir)/icons/hicolor/scalable/apps/
iconsscalable_DATA = scalable/apps/harmonyseq.svg
iconsscalablemdir = $(datadir)/icons/gnome/scalable/mimetypes/
iconsscalablem_DATA = scalable/mimetypes/text-x-harmonyseq.svg

harmonyseqiconsscalabledir = $(datadir)/harmonyseq/icons/hicolor/scalable/actions/
harmonyseqiconsscalable_DATA = scalable/add_ctrl_seq.svg scalable/add_note_seq.svg scalable/metronome.svg scalable/slope_linear.svg scalable/slope_flat.svg
harmonyseqicons48dir = $(datadir)/harmonyseq/icons/hicolor/48x48/actions/
harmonyseqicons48_DATA = 48x48/metronome.png 48x48/add_ctrl_seq.png 48x48/add_note_seq.png 
harmonyseqicons32dir = $(datadir)/harmonyseq/icons/hicolor/32x32/actions/
harmonyseqicons32_DATA = 32x32/metronome.png 32x32/add_ctrl_seq.png 32x32/add_note_seq.png
harmonyseqicons24dir = $(datadir)/harmonyseq/icons/hicolor/24x24/actions/
harmonyseqicons24_DATA = 24x24/metronome.png 24x24/add_ctrl_seq.png 24x24/add_note_seq.png

EXTRA_DIST = 32x32/apps/harmonyseq.png 48x48/apps/harmonyseq.png 192x192/apps/harmonyseq.png scalable/apps/harmonyseq.svg 32x32/mimetypes/text-x-harmonyseq.png 48x48/mimetypes/gnome-mime-text-x-harmonyseq.png 192x192/mimetypes/text-x-harmonyseq.png scalable/mimetypes/text-x-harmonyseq.svg icon1.svg metronome.svg 48x48/metronome.png 32x32/metronome.png 24x24/metronome.png 48x48/add_ctrl_seq.png 48x48/add_note_seq.png 32x32/add_ctrl_seq.png 32x32/add_note_seq.png 24x24/add_ctrl_seq.png 24x24/add_note_seq.png scalable/add_ctrl_seq.svg scalable/add_note_seq.svg scalable/metronome.svg scalable/slope_linear.svg scalable/slope_flat.svg scalable/add_ctrl_seq_small.svg scalable/add_note_seq_small.svg


install-data-hook:
uninstall-hook:
